[tool.poetry]
name = "elevators-prod"
version = "0.1.0"
description = ""
authors = ["saichenko <vladislav.saichenko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
attrs = "^23.1.0"
pytest = "^7.4.3"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
